[workspace]

members = [
  "tokio",
  "tokio-macros",
  "tokio-test",
  "tokio-stream",
  "tokio-util",

  # Internal
  "benches",
  "examples",
  "stress-test",
  "tests-build",
  "tests-integration",
]

[patch.crates-io]
mio = { git = "https://github.com/solid-rs/mio", branch = "solid-rs/0.7.x" }
socket2 = { git = "https://github.com/solid-rs/socket2", branch = "solid-rs/0.4.x" }
